2010-06-24 Andrew John Hughes  <ahughes@redhat.com>

	* patches/cacao/package-version.patch:
	Removed; breaks CACAO versioning.
	* Makefile.am:
	Update to new changeset with optimisation
	and version parsing fix.  Fix downloading.
	(CACAO_BASE_URL): Remove tip.tar.bz2 suffix.
	(CACAO_URL): Remove duplication of /hg/cacao/archive.
	(CACAO_VERSION): Bump to changeset which
	increases optimisation to -O2 not -O0.
	(CACAO_SHA256SUM): Updated for above.
	(download-cacao): Don't append CACAO_SRC_ZIP to URL.
	* patches/cacao/version-parsing.patch:
	Fix parsing of the minor version due to
	the update from 1.1.0pre to 1.1.0pre1 in
	the new changeset.
	* patches/cacao/6714758.patch:
	Fix bad paths introduced by previous changeset.

2010-06-24  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am
	(stamps/add-cacao.stamp, stamps/add-cacao-debug.stamp):
	Update libjsig.so installation location.
	* patches/cacao/package-version.diff: Drop 'preX' from the cacao
	package version.
	* patches/cacao/arm-arch-defines.patch: Remove cacao version fromi
	patched files.
	* patches/cacao/package-version.patch: Likewise.

2010-06-22 Andrew John Hughes  <ahughes@redhat.com>

	Remove VisualVM support, now maintained at
	http://icedtea.classpath.org/hg/visualvm
	* Makefile.am:
	Remove VisualVM targets, references and aliases.
	(NETBEANS_PROFILER_URL): Removed.
	(NETBEANS_PROFILER_SRC_ZIP): Likewise.
	(NETBEANS_PROFILER_SHA256SUM): Likewise.
	(VISUALVM_URL): Likewise.
	(VISUALVM_SRC_ZIP): Likewise.
	(VISUALVM_SHA256SUM): Likewise.
	(EXTRA_DIST): Remove visualvm.desktop.
	(clean-local): Remove clean-visualvm and clean-nbplatform.
	(.PHONY): Likewise.
	(download): Don't depend on download-visualvm.stamp
	(clean-download): Don't depend on clean-download-visualvm
	(download-visualvm): Removed.
	(clean-download-visualvm): Likewise.
	(extract): Don't depend on extract-visualvm.stamp
	(clean-extract): Don't depend on clean-extract-visualvm.
	(extract-visualvm): Removed.